@startuml
package com.csl.factory {
    abstract class Operation {
        - numberA : double
        - numberB : double
        + getResult() : double
    }
    class OperationAdd {
        + getResult() : double
    }
    class OperationSub {
        + getResult() : double
    }
    class OperationMul {
        + getResult() : double
    }
    class OperationDiv {
        + getResult() : double
    }
    class OperationFactory {
        - OperationFactory()
        + {static} createOperation(char op) : Operation
    }
    note bottom of Operation : Omit getter and setter
    OperationAdd --|> Operation
    OperationSub --|> Operation
    OperationMul --|> Operation
    OperationDiv --|> Operation
    OperationFactory .> Operation
}
@enduml
